--- a/Api/package.json
+++ b/Api/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
-    "build": "prisma generate && prisma db push",
+    "build": "prisma generate",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy"
   },
@@ -18,6 +18,6 @@
     "prisma": "^5.0.0"
   },
   "prisma": {
-    "schema": "./api/prisma/schema.prisma"
+    "schema": "./prisma/schema.prisma"
   }
 }
