--- a/Api/package.json
+++ b/Api/package.json
@@ -5,17 +5,17 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
-    "build": "prisma generate",
+    "build": "prisma generate && prisma db push --accept-data-loss",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate deploy"
+    "prisma:push": "prisma db push --accept-data-loss"
   },
   "dependencies": {
-    "@prisma/client": "^5.0.0",
-    "express": "^4.18.0",
+    "@prisma/client": "^5.22.0",
+    "express": "^4.21.1",
     "cors": "^2.8.5"
   },
   "devDependencies": {
-    "prisma": "^5.0.0"
+    "prisma": "^5.22.0"
   },
   "prisma": {
     "schema": "./prisma/schema.prisma"
