--- a/Api/package.json
+++ b/Api/package.json
@@ -7,7 +7,8 @@
     "dev": "node server.js",
     "build": "prisma generate && prisma db push --accept-data-loss",
     "prisma:generate": "prisma generate",
-    "prisma:push": "prisma db push --accept-data-loss"
+    "prisma:push": "prisma db push --accept-data-loss",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
