--- a/Api/package.json
+++ b/Api/package.json
@@ -9,6 +9,7 @@
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push --accept-data-loss",
     "prisma:studio": "prisma studio",
+    "prisma:migrate": "prisma migrate deploy",
     "healthcheck": "node -e \"import('node-fetch').then(({default: fetch}) => fetch('http://localhost:10000/api/health').then(res => process.exit(res.status === 200 ? 0 : 1)).catch(() => process.exit(1)))\""
   },
   "dependencies": {
