--- a/Api/package.json
+++ b/Api/package.json
@@ -4,23 +4,32 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js",
-    "build": "npm install && npx prisma generate && npx prisma db push --accept-data-loss",
+    "dev": "nodemon server.js",
+    "build": "npm install && npx prisma generate",
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push --accept-data-loss",
     "prisma:studio": "prisma studio",
     "prisma:migrate": "prisma migrate deploy",
-    "healthcheck": "node -e \"import('node-fetch').then(({default: fetch}) => fetch('http://localhost:10000/api/health').then(res => process.exit(res.status === 200 ? 0 : 1)).catch(() => process.exit(1)))\""
+    "healthcheck": "node -e \"fetch('http://localhost:10000/api/health').then(res => process.exit(res.status === 200 ? 0 : 1)).catch(() => process.exit(1))\""
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
-    "express": "^4.21.1",
-    "cors": "^2.8.5"
+    "@prisma/client": "^5.7.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "helmet": "^7.0.0",
+    "express-rate-limit": "^7.1.5",
+    "compression": "^1.7.4"
   },
   "devDependencies": {
-    "prisma": "^5.22.0"
+    "prisma": "^5.7.0",
+    "nodemon": "^3.0.1"
   },
   "prisma": {
     "schema": "./prisma/schema.prisma"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
