--- a/Api/package.json
+++ b/Api/package.json
@@ -5,13 +5,10 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "npm install && npx prisma generate && npx prisma db push --force-reset",
+    "build": "npm install && npx prisma generate",
     "prisma:generate": "prisma generate",
-    "prisma:push": "prisma db push --force-reset",
-    "prisma:studio": "prisma studio",
-    "prisma:migrate": "prisma migrate deploy",
-    "prisma:migrate:dev": "prisma migrate dev --name init",
-    "healthcheck": "node -e \"fetch('http://localhost:10000/api/health').then(res => process.exit(res.status === 200 ? 0 : 1)).catch(() => process.exit(1))\""
+    "prisma:push": "prisma db push --accept-data-loss",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
@@ -19,8 +16,7 @@
     "cors": "^2.8.5"
   },
   "devDependencies": {
-    "prisma": "^5.22.0",
-    "nodemon": "^3.1.9"
+    "prisma": "^5.22.0"
   },
   "prisma": {
     "schema": "./prisma/schema.prisma"
