--- a/Api/package.json
+++ b/Api/package.json
@@ -10,7 +10,7 @@
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push --accept-data-loss",
     "prisma:studio": "prisma studio",
-    "render-build": "npm install && npx prisma generate",
+    "setup-db": "node setup-database.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -28,17 +28,5 @@
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
-  },
-  "keywords": [
-    "api",
-    "education",
-    "challenges",
-    "learning"
-  ],
-  "author": "Coliseum Team",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/icaroAlvesS-20/Coliseum-Api"
   }
 }
