--- a/Api/package.json
+++ b/Api/package.json
@@ -11,11 +11,13 @@
     "prisma:push": "prisma db push --accept-data-loss",
     "prisma:studio": "prisma studio",
     "setup-db": "node setup-database.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "encrypt:migrate": "node migrate-encryption.js"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
